--- a/atkomail-client/public/index.html
+++ b/atkomail-client/public/index.html
@@ -5,11 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <meta name="description" content="Atko.email, demonstration email service for Solutions Engineers or anyone who needs a temporary email.">
+    <meta property="og:title" content="Atko.email">
+    <meta property="og:description" content="Demonstration emails done right. An email service for Solutions Engineers or anyone who needs a temporary email.">
+    <meta property="og:image" content="%PUBLIC_URL%/image.png">
+    <meta property="og:image:alt" content="Image description">
+    <meta property="og:locale" content="en_GB">
+    <meta property="og:type" content="website">
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Atko.email - Demonstration emails done right</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
