--- a/atkomail-client/public/index.html
+++ b/atkomail-client/public/index.html
@@ -8,7 +8,7 @@
 
     <meta name="description" content="Atko.email, demonstration email service for Solutions Engineers or anyone who needs a temporary email.">
     <meta property="og:title" content="Atko.email">
-    <meta property="og:description" content="Demonstration emails done right. An email service for Solutions Engineers or anyone who needs a temporary email.">
+    <meta property="og:description" content="Demonstration emails done right. An dynamic mailbox service for Solution Engineers or anyone who needs a temporary email.">
     <meta property="og:image" content="%PUBLIC_URL%/image.png">
     <meta property="og:image:alt" content="Image description">
     <meta property="og:locale" content="en_GB">
