--- a/atkomail-client/public/index.html
+++ b/atkomail-client/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <meta name="description" content="Atko.email, demonstration email service for Solutions Engineers or anyone who needs a temporary email.">
-    <meta property="og:title" content="Atko.email">
+    <meta name="description" content="Drata.email, demonstration email service for Solutions Engineers or anyone who needs a temporary email.">
+    <meta property="og:title" content="Drata.email">
     <meta property="og:description" content="Demonstration emails done right. An dynamic mailbox service for Solution Engineers or anyone who needs a temporary email.">
     <meta property="og:image" content="%PUBLIC_URL%/image.png">
     <meta property="og:image:alt" content="Image description">
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Atko.email - Demonstration emails done right</title>
+    <title>Drata.email - Demonstration emails done right</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
